objects/Customer_Site__c.object
<CustomObject>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sedona customer record</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>CustomerSites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Sites</relationshipLabel>
        <relationshipName>Customer_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_SiteId__c</fullName>
        <label>Customer SiteId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCommercial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCommercial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Safe_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Safe Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Number__c</fullName>
        <label>Site Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>Telephone</label>
        <type>Phone</type>
    </fields>
    <label>Customer Site</label>
    <listViews>
        <fullName>Member_Experience_Customer_Site</fullName>
        <filterScope>Queue</filterScope>
        <label>Member Experience</label>
        <queue>Member_Experience</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>CustomerSite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Sites</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>